--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
+        "nexmo/client": "^2.4",
         "niklasravnsborg/laravel-pdf": "^4.1"
     },
     "require-dev": {
