--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel_ecommerce
+DB_DATABASE=lara_ecom_8
 DB_USERNAME=root
 DB_PASSWORD=password
 
